# Rust-File-Scanner

./: Cargo.toml  LICENSE  README.md
crates/home-scan/: Cargo.toml
crates/home-scan/src/: lib.rs  main.rs
crates/scanner/src/: lib.rs
